--- a/src/pages/landingPage/header/header.module.css
+++ b/src/pages/landingPage/header/header.module.css
@@ -1,88 +1,81 @@
-.header_section{
-    /* background: rgb(255,118,206); */
-/* background: linear-gradient(45deg, rgba(255,118,206,1) 0%, rgba(255,141,204,1) 19%, rgba(255,177,201,1) 77%, rgba(254,213,198,1) 96%, rgba(253,255,194,1) 100%); */
-background-color: var(--primary-color);
-background-image: linear-gradient(180deg, #ff76ce 35%, #ffffff 100%);
-
-
-
-    min-width: 320px;
-    min-height: 100vh;
-    /* color: rgba(0, 0, 0, 0.805); */
-    /* color: whitesmoke; */
-    margin: auto 0;
-
+.header_section {
+  background-color: var(--primary-color);
+  background-image: linear-gradient(
+    180deg,
+    var(--primary-color) 35%,
+    #ffffff 100%
+  );
+  min-width: 320px;
+  min-height: 100vh;
+  margin: auto 0;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-nav{
-    background-color:#ff76ce;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:1em 3em ;
-    color: black;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-   
-
+nav {
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 3em;
+  color: black;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.hamburger_menu{
-    font-size: 4em;
-    text-shadow: -3px 5px 4px rgba(0,0,0,0.1);
-
+.hamburger_menu {
+  font-size: 4em;
+  text-shadow: -3px 5px 4px rgba(0, 0, 0, 0.1);
 }
 
-.text_container{
-    width: 50%;
-    padding: 3em;
-    height: 100%;
-    padding-top: 12em;
+.text_container {
+  width: 50%;
+  padding: 3em;
+  height: 100%;
+  padding-top: 12em;
+}
+
+.text_container h1 {
+  line-height: 0.8em;
+  text-shadow: -3px 5px 4px rgba(0, 0, 0, 0.1);
+  font-size: 3em;
+  margin: 0;
+}
+
+.text_container h3 {
+  opacity: 0.75;
+  margin-top: 1em;
+  line-height: 1em;
+}
+
+.text_container button {
+  background-color: black;
+  color: white;
+  border: 0;
+  border-radius: 24px;
+  padding: 1em 3em;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.sub_text {
+  font-size: smaller;
+}
+
+@media screen and (max-width: 426px) {
+  .text_container {
+    padding-top: 3em;
   }
-
-.text_container h1{
-    line-height: 0.8em;
-    text-shadow: -3px 5px 4px rgba(0,0,0,0.1);
-    font-size: 3em;
-    margin: 0;
-}
-
-.text_container h3{
-    opacity: 0.75;
-    margin-top: 1em;
-    line-height: 1em;
-}
-
-.text_container button{
-    /* background-color: var(--secondary-color); */
-    background-color: black;
-    color: white;
-    border: 0;
-    border-radius: 24px;
-    padding: 1em 3em;
-    font-size: 16px;
-    margin-top: 20px;
-}
-
-button:hover{
-    cursor: pointer;
-}
-
-.sub_text{
-    font-size: smaller;
-}
-
-@media screen and (max-width:426px) {
-    .text_container{
-        padding-top: 3em;
-    }
-    .text_container h1{
-        font-size: 2.4em;
-    }
+  .text_container h1 {
+    font-size: 2.4em;
+  }
 }
